Working except for Swagger PUT using the wrong media type?
